typo in user_id. Had Added a ; which would break a lot of stuff

--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Content</th>
-      <th>User id;</th>
+      <th>User id</th>
       <th></th>
       <th></th>
       <th></th>
@@ -15,7 +15,7 @@
     <% @microposts.each do |micropost| %>
       <tr>
         <td><%= micropost.content %></td>
-        <td><%= micropost.user_id; %></td>
+        <td><%= micropost.user_id %></td>
         <td><%= link_to 'Show', micropost %></td>
         <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
         <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
