--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>User id;:</strong>
-  <%= @micropost.user_id; %>
+  <strong>User id:</strong>
+  <%= @micropost.user_id %>
 </p>
 
 <%= link_to 'Edit', edit_micropost_path(@micropost) %> |
